# esp32_wifi_io

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
angular/: Makefile  README.md  angular.json  package.json
angular/e2e/src/: app.e2e-spec.ts
angular/src/: index.html  polyfills.ts  styles.scss  tsconfig.app.json
angular/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
main/: CMakeLists.txt  app.h  component.mk  esp32_wifi_io.c  http_ota_handler.c  http_ota_handler.h  http_task.c  http_task.h  part_info.c  part_info.h  wifi_task.c  wifi_task.h
